--- a/about_en.html
+++ b/about_en.html
@@ -39,11 +39,12 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
           <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
-          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
-          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <li><a href="./these_en.html" title=""><p style="color:black;">03 : Thesis</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">04 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">05 : Academic Training</p></a></li>
           <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
-          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
-          <li><a href="./about.html" title=""><p style="color:black;">Version Française</p></a></li>
+          <li><a href="./contact_en.html" title=""><p style="color:black;">06 : Contact</p></a></li>
+          <li><a href="./works.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
@@ -67,17 +68,14 @@
                   <p align="center"><a href="CV_en.pdf" class="btn btn-primary btn-lg">Download my CV</a></p>
                   <br>
                   <h3>Introduction</h3>
-                  <p>My name is Adrien Fauste-Gay, I am a student in my fourth year at École Normale Supérieure in Paris. I am affiliated with the Physics department and I am currently preparing for my Master's degree in Bio-Physics. This program focuses on modeling and studying living systems, which are very rich and complex in their behaviors. This leads to studying various subjects such as statistical physics, population dynamics, and complex systems analysis.
-                  <br>
-                  I also take advantage of the highly interdisciplinary environment of ENS to study other subjects such as history, economics, and computer science. I have taken many courses in the "Environment and Society" department which deals with ecological issues from a multidisciplinary perspective (scientific, legal, philosophical, etc.).</p>
-                  <h3>Projects</h3>
-                  <p>I believe that our relationship with nature must be questioned. We are now reaching the limit of a model of production and distribution of wealth. If we do not want to live in an unstable world, both climatically and socially, we must begin the transition today. Because of my training, I have long thought of working in research on climate-related or more fundamental subjects. But last November, I had the opportunity to be sent by ENS as an observer to COP 27. This trip deeply affected me because of the nature of the event and the people I met. The choice of career is an important element. I think that scientists have a responsibility to contribute, a role to play and real added value to bring to these questions.</p>
+                  <p>My name is Adrien Fauste-Gay. I am studying the resilience and vulnerabilities of agricultural systems in France using a model of foresight and analysis of land use. I am conducting this research as part of a thesis supervised by Lauriane Mouysset in Paris at the International Research Center on Environment and Development (CIRED) and Olivier Vidal in Grenoble at the Institute of Earth Sciences (ISTerre). In connection with my thesis, I am working with the Agriculture team of the Shift Project to develop their future work.</p>
+                  <p>I completed my studies at the Physics Department of the Ecole Normale Supérieure with a minor in Environment and Societies. I obtained a master's degree in Bio-Physics. I am particularly interested in topics related to the environment and the organization of our societies' transition in the face of the challenges of the 21st century.</p>
                   <!--<h3>Personalité et centres d'interêts</h3>
                   <p>
                   Je travaille principalement sur les systèmes dynamiques complexes et en particulier l'emergence de phénomènes d'ensembles non linéaires à partir d'éléments pourtant simples. On retrouve ces mécanismes en Biologie (écologie), Physique (transition de phase), Informatique (algorithmes des réseaux).</p>-->
                 </div>
                 <div class="col-xs-15 col-md-6">
-                  <img src="./assets/images/ID.JPG" class="img-responsive" alt="">
+                  <img src="./assets/images/ID.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
