--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <link href="./assets/logoV3.jpg" rel="icon"> <!--*.ico-->
 
   <title>Adrien Fauste-gay</title>  
 
@@ -37,13 +37,15 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Accueil</a></li>
-          <li><a href="./about.html" title="">02 : A propos</a></li>
-          <li><a href="./works.html" title="">03 : Travaux</a></li>
-          <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
-          <li><a href="./contact.html" title="">05 : Contact</a></li>
-          <li><a href="./contact_en.html" title="">English version</a></li>
+          <li><a href="./index.html" title=""><p style="color:black;">01 : Accueil</p></a></li>
+          <li><a href="./about.html" title=""><p style="color:black;">02 : A propos</p></a></li>
+          <li><a href="./these.html" title=""><p style="color:black;">03 : Thèse</p></a></li>
+          <li><a href="./works.html" title=""><p style="color:black;">04 : Travaux</p></a></li>
+          <li><a href="./cours.html" title=""><p style="color:black;">05 : Formation Académique</p></a></li>
+          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
+          <li><a href="./contact.html" title=""><p style="color:black;">06 : Contact</p></a></li>
+          <li><a href="./contact_en.html" title=""><p style="color:black;">English Version</p></a></li>
+          <!--<li><a href="./components.html" title="">05 : Components</a></li>-->
         </ul>
 
 
@@ -76,19 +78,19 @@
                       </div>
                       <button type="submit" class="btn btn-default btn-lg">Send</button>
                     </div>-->
-                    <div class="col-md-5 address-container">
+                    <div class="col-md-50 address-container">
                       <ul class="list-unstyled">
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          adrien.gay@ens.psl.eu
+                          adrien.fauste-gay@theshiftproject.org
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          45 rue d'Ulm, Paris, 75005
+                          CIRED, 94736 Cédex, 45bis Av. de la Belle Gabrielle, 94130 Nogent-sur-Marne
                         
                       <!--<h3>Follow me on social networks</h3>
                       <a href="http://www.facebook.com" title="" class="fa-icon">
@@ -121,7 +123,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a><!--/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>-->
       </div> 
     </div>
   </div>
