--- a/contact_en.html
+++ b/contact_en.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <link href="./assets/logoV3.jpg" rel="icon">
 
   <title>Adrien Fauste-gay</title>  
 
@@ -39,10 +39,11 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
           <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
-          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
-          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <li><a href="./these_en.html" title=""><p style="color:black;">03 : Thesis</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">04 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">05 : Academic Training</p></a></li>
           <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
-          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./contact_en.html" title=""><p style="color:black;">06 : Contact</p></a></li>
           <li><a href="./contact.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
@@ -76,7 +77,7 @@
                       </div>
                       <button type="submit" class="btn btn-default btn-lg">Send</button>
                     </div>-->
-                    <div class="col-md-5 address-container">
+                    <div class="col-md-50 address-container">
                       <ul class="list-unstyled">
                         <li>
                           <span class="fa-icon">
@@ -88,7 +89,7 @@
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
-                          45 rue d'Ulm, Paris, 75005
+                          CIRED, 94736 Cédex, 45bis Av. de la Belle Gabrielle, 94130 Nogent-sur-Marne
                         
                       <!--<h3>Follow me on social networks</h3>
                       <a href="http://www.facebook.com" title="" class="fa-icon">
@@ -121,7 +122,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a><!--/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>-->
       </div> 
     </div>
   </div>
