--- a/cours.html
+++ b/cours.html
@@ -39,11 +39,12 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Accueil</a></li>
           <li><a href="./about.html" title="">02 : A propos</a></li>
-          <li><a href="./works.html" title="">03 : Travaux</a></li>
-          <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
+          <li><a href="./these.html" title="">03 : Thèse</a></li>
+          <li><a href="./works.html" title="">04 : Travaux</a></li>
+          <li><a href="./cours.html" title="">05 : Formation Académique</a></li>
           <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
-          <li><a href="./contact.html" title="">05 : Contact</a></li>
-          <li><a href="./cours_en.html" title="">English version</a></li>
+          <li><a href="./contact.html" title="">06 : Contact</a></li>
+          <li><a href="./JFA_en.html" title="">English version</a></li>
         </ul>
 
 
@@ -97,6 +98,7 @@
             <div class="col-md-6">
               <h3 class="template-title-example">Environnement et Sociétés</h3>
                 <ul>
+                  <li>Matérialités historiques de l'agriculture</li>
                   <li>Penser la Transition</li>
                   <li>Paléo-climat et Paléo-environements</li>
                   <li>Négociations climatiques, géopolitique du climat et COP</li>
