--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <link href="./assets/logoV3.jpg" rel="icon">
 
   <title>Adrien Fauste-Gay</title>  
 
@@ -39,10 +39,11 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title=""><p style="color:black;">01 : Accueil</p></a></li>
           <li><a href="./about.html" title=""><p style="color:black;">02 : A propos</p></a></li>
-          <li><a href="./works.html" title=""><p style="color:black;">03 : Travaux</p></a></li>
-          <li><a href="./cours.html" title=""><p style="color:black;">04 : Formation Académique</p></a></li>
+          <li><a href="./these.html" title=""><p style="color:black;">03 : Thèse</p></a></li>
+          <li><a href="./works.html" title=""><p style="color:black;">04 : Travaux</p></a></li>
+          <li><a href="./cours.html" title=""><p style="color:black;">05 : Formation Académique</p></a></li>
           <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
-          <li><a href="./contact.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./contact.html" title=""><p style="color:black;">06 : Contact</p></a></li>
           <li><a href="./index_en.html" title=""><p style="color:black;">English Version</p></a></li>
           <!--<li><a href="./components.html" title="">05 : Components</a></li>-->
         </ul>
@@ -63,9 +64,10 @@
                 <span id="typed-strings">
                   <span>Bienvenue,<br>
                   Sur la page d'Adrien Fauste-Gay</span>
+                  <span>Doctorant sur les systèmes agricoles</span>
                   <span>Physique, Systèmes complexes</span>
                   <span>Ecologie, Modélisation, Transition</span>
-                  <span>Dynamique des réseaux, Comportements collectifs</span>
+                  <!--<span>Dynamique des réseaux, Comportements collectifs</span> -->
                 </span>
                 <span id="typed"></span>
               </h1>
