--- a/index_en.html
+++ b/index_en.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <link href="./assets/logoV3.jpg" rel="icon">
 
   <title>Adrien Fauste-Gay</title>  
 
@@ -39,10 +39,11 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
           <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
-          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
-          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <li><a href="./these_en.html" title=""><p style="color:black;">03 : Thesis</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">04 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">05 : Academic Training</p></a></li>
           <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
-          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./contact_en.html" title=""><p style="color:black;">06 : Contact</p></a></li>
           <li><a href="./index.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
@@ -62,9 +63,10 @@
                 <span id="typed-strings">
                   <span>Welcome,<br>
                   To Adrien Fauste-Gay's page</span>
+                  <span>PhD student on agricultural systems</span>
                   <span>Physics, Complex Systems</span>
                   <span>Ecology, Modeling, Transition</span>
-                  <span>Network Dynamics, Collective Behaviors</span>
+                  <!--<span>Network Dynamics, Collective Behaviors</span>-->
                 </span>
                 <span id="typed"></span>
               </h1>
