--- a/works_en.html
+++ b/works_en.html
@@ -39,10 +39,11 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
           <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
-          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
-          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <li><a href="./these_en.html" title=""><p style="color:black;">03 : Thesis</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">04 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">05 : Academic Training</p></a></li>
           <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
-          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
+          <li><a href="./contact_en.html" title=""><p style="color:black;">06 : Contact</p></a></li>
           <li><a href="./works.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
@@ -72,6 +73,17 @@
             <div class="item active">
                 <div class="row">
 
+                    <div class="col-sm-4">
+                        <a href="./M2_en.html" title="" class="black-image-project-hover">
+                            <img src="./assets/images/map-c2.png" alt="" class="img-responsive">
+                        </a>
+                        <div class="card-container card-container-lg">
+                            <h4>Vienna, Austria</h4>
+                            <h3>Study of Supply Chain Resilience</h3>
+                            <p>Study of the resilience of physical supply chains at the international level to estimate the vulnerable points of the international transport network.</p>
+                            <a href="./M2_en.html" title="" class="btn btn-default">Learn more</a>
+                        </div>
+                    </div>
 
                     <div class="col-sm-4">
                       <a href="./COP_en.html" title="" class="black-image-project-hover">
@@ -95,7 +107,14 @@
                         <a href="./JFA_en.html" title="" class="btn btn-default">Learn more</a>
                       </div>
                     </div>
-                    <div class="col-sm-4">
+                      
+                </div>
+                <!--/row-->
+            </div>
+            <!--/item-->
+            <div class="item">
+                <div class="row">
+                  <div class="col-sm-4">
                       <a href="./M1_en.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/suivi.PNG" alt="" class="img-responsive">
                       </a>
@@ -106,13 +125,6 @@
                         <a href="./M1_en.html" title="" class="btn btn-default">Learn more</a>
                       </div>
                     </div>
-                      
-                </div>
-                <!--/row-->
-            </div>
-            <!--/item-->
-            <div class="item">
-                <div class="row">
                   <div class="col-sm-4">
                       <a href="./Bottle_en.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/R=0.25.jpg" alt="" class="img-responsive">
