--- a/COP.html
+++ b/COP.html
@@ -69,7 +69,7 @@
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">Observateur accrédité à la COP 27</h1>
-            <p align="center">L'ENS m'a offert la chance d'aller à la COP 27 en novembre 2022 à Sharm-El-Sheik sur la pointe sud du Sinaï. J'ai eu accès à la quasi totalité de la zone bleue, zone diplomatique où les négociations se déroulent. Ce voyage m'a profondément marqué par la nature de l'évènement et des rencontres que j'ai faites. Le choix de carrière est un élément important. Je pense que les scientifiques ont la responsabilité de contribuer, un rôle à jouer et une vraie plus value à apporter sur ces questions. J'ai embarqué avec moi une caméra pour prendre des images et enregistrer certaines de mes rencontres. Nous avons été invité à parler de notre présence à la COP à l'Ecole Français de Sharm-El_Sheik. Enfin, nous avons pu interagir avec divers journalistes, donnant ainsi lieu à la publication de plusieurs articles <!--. Vous pouvez en consulter quelques uns : <br>https://www.ladepeche.fr/2022/11/10/adrien-etudiant-a-lens-et-observateur-de-la-cop27-pour-le-moment-cest-beaucoup-de-brassage-de-vent-10795287.php<br>https://www.bfmtv.com/replay-emissions/premiere-edition-6h-8h30/</p> -->
+            <p align="center">L'ENS m'a offert la chance d'aller à la COP 27 en novembre 2022 à Sharm-El-Sheik sur la pointe sud du Sinaï. J'ai eu accès à la quasi totalité de la zone bleue, zone diplomatique où les négociations se déroulent. Ce voyage m'a profondément marqué par la nature de l'évènement et des rencontres que j'ai faites. Le choix de carrière est un élément important. Je pense que les scientifiques ont la responsabilité de contribuer, un rôle à jouer et une vraie plus value à apporter sur ces questions. J'ai embarqué avec moi une caméra pour prendre des images et enregistrer certaines de mes rencontres. Nous avons été invités à parler de notre présence à la COP à l'Ecole Française de Sharm-El_Sheik. Enfin, nous avons pu interagir avec divers journalistes, donnant ainsi lieu à la publication de plusieurs articles. <!--. Vous pouvez en consulter quelques uns : <br>https://www.ladepeche.fr/2022/11/10/adrien-etudiant-a-lens-et-observateur-de-la-cop27-pour-le-moment-cest-beaucoup-de-brassage-de-vent-10795287.php<br>https://www.bfmtv.com/replay-emissions/premiere-edition-6h-8h30/</p> -->
           </div>
 
           <!--<blockquote>
@@ -85,7 +85,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-6">
             <img src="./assets/images/cop_libe_carre.jpeg" class="img-responsive" alt="">
-            <p>Tribune publié dans Libération par la délégation COP-ENS</p>
+            <p>Tribune publiée dans Libération par la délégation COP-ENS</p>
           </div>
           <div class="col-xs-12 col-md-6">
             <img src="./assets/images/cop_ad_eg_carre.jpeg" class="img-responsive" > <!-- alt="" style="width:370px;height:370px;"> -->
@@ -98,7 +98,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-6">
             <img src="./assets/images/cop_train_carre.jpeg" class="img-responsive" alt="">
-            <p>Le voyage se fit le plus possible par train</p>
+            <p>Le voyage s'est fait autant que possible en train</p>
           </div>
           <div class="col-xs-12 col-md-6">
             <img src="./assets/images/cop_pleniere_carre.jpeg" class="img-responsive"> <!-- alt="" style="width:370px;height:370px;"> -->
