--- a/COP_en.html
+++ b/COP_en.html
@@ -39,11 +39,12 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index_en.html" title=""><p style="color:black;">01 : Home</p></a></li>
           <li><a href="./about_en.html" title=""><p style="color:black;">02 : About</p></a></li>
-          <li><a href="./works_en.html" title=""><p style="color:black;">03 : Works</p></a></li>
-          <li><a href="./cours_en.html" title=""><p style="color:black;">04 : Academic Training</p></a></li>
+          <li><a href="./these_en.html" title=""><p style="color:black;">03 : Thesis</p></a></li>
+          <li><a href="./works_en.html" title=""><p style="color:black;">04 : Works</p></a></li>
+          <li><a href="./cours_en.html" title=""><p style="color:black;">05 : Academic Training</p></a></li>
           <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
-          <li><a href="./contact_en.html" title=""><p style="color:black;">05 : Contact</p></a></li>
-          <li><a href="./COP.html" title=""><p style="color:black;">Version Française</p></a></li>
+          <li><a href="./contact_en.html" title=""><p style="color:black;">06 : Contact</p></a></li>
+          <li><a href="./works.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
