--- a/JFA.html
+++ b/JFA.html
@@ -69,7 +69,7 @@
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">Manipulation de molécule unique par pince optique</h1>
-            <p align="center">Travaux réalisés dans le cadre d'un CDD au CNRS dans l'équique ABCD Lab. Il fallait préparer  et installer des cannaux micro-fluidiques traités pour fixer des brins d'ADN. Les brins d'ADN étaient équipés d'une bille de métal à une extrémité, ce qui permet d'appliquer une force (de quelques pN) pour tendre le polymère. Ces brins étaient designés pour former des complexes G-4 et des hairpins. Sous certaines conditions, des enzymes polymérases peuvent déplier et rompre les G-4. J'ai pu étudier l'influence de flavoïdes sur l'activité de la polymérase.</p>
+            <p align="center">Travaux réalisés dans le cadre d'un CDD au CNRS dans l'équique ABCD Lab. Il fallait préparer  et installer des cannaux micro-fluidiques traités pour fixer des brins d'ADN. Les brins d'ADN étaient équipés d'une bille de métal à une extrémité, ce qui permet d'appliquer une force (de quelques pN) pour tendre le polymère. Ces brins étaient conçus pour former des complexes G-4 et des hairpins. Sous certaines conditions, des enzymes polymérases peuvent déplier et rompre les G-4. J'ai pu étudier l'influence de flavoïdes sur l'activité de la polymérase.</p>
           </div>
 
           <!--<blockquote>
