--- a/cours.html
+++ b/cours.html
@@ -69,7 +69,7 @@
                 <table>
                   <td style="padding-right: 50px">
                     <li>Systèmes complexes : de la Physique aux Sciences Sociales</li>
-                    <li>Matière Active et Comportement Collectifs</li>
+                    <li>Matière Active et Comportements Collectifs</li>
                     <li>Physique des Fluides et Physique non Linéaire</li>
                     <li>Relativité et Electromagnétisme</li>
                     <li>Introduction à la mécanique quantique</li>
@@ -88,7 +88,7 @@
                     <li>Transitions de phase</li>
                     <li>Physique expérimentale</li>
                     <li>Biophysique</li>
-                    <li>Physiquer du Solide</li>
+                    <li>Physique du Solide</li>
                   </td>
                 </table>
               </ul>
@@ -112,7 +112,7 @@
             <div class="col-md-6">
               <h3 class="template-title-example">Informatique</h3>
                 <ul>
-                  <li>Depp Learning : Une vue d'ensemble de l'apprentissage profond en pratique</li>
+                  <li>Deep Learning : Une vue d'ensemble de l'apprentissage profond en pratique</li>
                   <li>Modèles et algorithmes des Réseaux</li>
                   <li>Planification de mouvement en robotique et en animation graphique</li>
                   <li>Python pour scientifiques</li>
