--- a/these_en.html
+++ b/these_en.html
@@ -157,13 +157,13 @@
                         <!-- Introduction Tab -->
                         <div id="introduction" class="tab-pane fade in active">
                             <h2>Introduction</h2>
-                            <p>This page presents and documents the work I am carrying out during my thesis. It began in October 2023 and is co-supervised by Lauriane Mouysset at CIRED and Olivier Vidal at isterre. As part of my research, I am taking part in the work of the Shift Project's Agriculture team. The elements presented will be updated regularly as I progress. Some sections may be empty or sparsely filled, this will change.</p>
+                            <p>This page presents and documents the work I am carrying out during my thesis. It began in October 2023 and is co-supervised by Lauriane Mouysset at CIRED and Olivier Vidal at isterre. As part of my research, I am taking part in the work of the Shift Project's Agriculture team. The elements presented will be updated regularly as I progress. Some sections may be empty or sparsely filled. It will be updated on a regular basis.</p>
 
                             <!--<p> Une version PDF de la documentation de mon modèle est disponible ici :</p>
                             <p align="center"><a href="CV_en.pdf" class="btn btn-primary btn-lg">Documentation (PDF)</a></p>-->
                             <h3>Background</h3>
                             My thesis project, carried out in collaboration with the Shift Project, aims to study the exchanges of matter and energy between human systems such as agriculture and the environment, in order to understand the development models of societies and determine how to build a viable and sustainable future. 
-                            More specifically, I'm interested in physical economics, i.e. the exchange of flows and matter in socio-economic systems, particularly in agriculture. The analysis of these flows is known as metabolism. This has enabled us to analyze major metabolic transitions in our societies, such as the transition from the poly-culture livestock farming of the early 20th century to today's intensive industrial agriculture, via the replacement of animal traction by tractors, for example. For more details, see Petros chatzimpiros' work on energy or Julia Le Noé's on nitrogen flows.
+                            More specifically, I'm interested in physical economics, i.e. the flows of matter and energy in socio-economic systems, particularly in agriculture. The analysis of these flows is known as metabolism. This has enabled us to analyze major metabolic transitions in our societies, such as the transition from the poly-culture livestock farming of the early 20th century to today's intensive industrial agriculture, via the replacement of animal traction by tractors, for example. For more details, see Petros chatzimpiros' work on energy or Julia Le Noé's on nitrogen flows.
 
                             <h3>Thermodynamics and graph theory</h3>
 
