--- a/works.html
+++ b/works.html
@@ -37,13 +37,14 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title=""><p style="color:black;">01 : Accueil</p></a></li>
-          <li><a href="./about.html" title=""><p style="color:black;">02 : A propos</p></a></li>
-          <li><a href="./works.html" title=""><p style="color:black;">03 : Travaux</p></a></li>
-          <li><a href="./cours.html" title=""><p style="color:black;">04 : Formation Académique</p></a></li>
-          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
-          <li><a href="./contact.html" title=""><p style="color:black;">05 : Contact</p></a></li>
-          <li><a href="./works_en.html" title=""><p style="color:black;">English Version</p></a></li>
+          <li><a href="./index.html" title="">01 : Accueil</a></li>
+          <li><a href="./about.html" title="">02 : A propos</a></li>
+          <li><a href="./these.html" title="">03 : Thèse</a></li>
+          <li><a href="./works.html" title="">04 : Travaux</a></li>
+          <li><a href="./cours.html" title="">05 : Formation Académique</a></li>
+          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
+          <li><a href="./contact.html" title="">06 : Contact</a></li>
+          <li><a href="./M2_en.html" title="">English version</a></li>
         </ul>
 
 
@@ -79,7 +80,7 @@
                     <div class="card-container card-container-lg">
                         <h4>Vienne, Autriche</h4>
                         <h3>Etude de la résilience des supply chains</h3>
-                        <p>Etude de la résilience des chaînes physique d'approvisionnement à l'échelle internationnale pour estimer les points vulnérables du réseau de transport international.</p>
+                        <p>Etude de la résilience des chaînes physiques d'approvisionnement à l'échelle internationnale pour estimer les points vulnérables du réseau de transport international.</p>
                         <a href="./M2.html" title="" class="btn btn-default">En savoir plus</a>
                       </div>
                     </div>
@@ -102,7 +103,7 @@
                     <div class="card-container card-container-lg">
                         <h4>Laboratoire de Physique de l'ENS</h4>
                         <h3>Manipulation de molécules uniques par pince magnétique</h3>
-                        <p>Analyse de l'influence de molécules de la famille des flavoïdes sur la stabilité de complexes formé sur de l'ADN.</p>
+                        <p>Analyse de l'influence de molécules de la famille des flavoïdes sur la stabilité de complexes formés sur de l'ADN.</p>
                         <a href="./JFA.html" title="" class="btn btn-default">En savoir plus</a>
                       </div>
                     </div>
