--- a/works_en.html
+++ b/works_en.html
@@ -102,7 +102,7 @@
                       </a>
                     <div class="card-container card-container-lg">
                         <h4>Physics Laboratory of ENS</h4>
-                        <h3>Manipulation of Unique Molecules by Magnetic Tweezers</h3>
+                        <h3>Manipulation of Unique Molecule by Magnetic Tweezers</h3>
                         <p>Analysis of the influence of flavoid molecules on the stability of complexes formed on DNA.</p>
                         <a href="./JFA_en.html" title="" class="btn btn-default">Learn more</a>
                       </div>
