--- a/COP_en.html
+++ b/COP_en.html
@@ -44,7 +44,7 @@
           <li><a href="./cours_en.html" title=""><p style="color:black;">05 : Academic Training</p></a></li>
           <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
           <li><a href="./contact_en.html" title=""><p style="color:black;">06 : Contact</p></a></li>
-          <li><a href="./works.html" title=""><p style="color:black;">Version Française</p></a></li>
+          <li><a href="./COP.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
