--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
           <li><a href="./cours.html" title="">05 : Formation Académique</a></li>
           <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
           <li><a href="./contact.html" title="">06 : Contact</a></li>
-          <li><a href="./JFA_en.html" title="">English version</a></li>
+          <li><a href="./about_en.html" title="">English version</a></li>
         </ul>
 
 
