--- a/about_en.html
+++ b/about_en.html
@@ -44,7 +44,7 @@
           <li><a href="./cours_en.html" title=""><p style="color:black;">05 : Academic Training</p></a></li>
           <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
           <li><a href="./contact_en.html" title=""><p style="color:black;">06 : Contact</p></a></li>
-          <li><a href="./works.html" title=""><p style="color:black;">Version Française</p></a></li>
+          <li><a href="./about.html" title=""><p style="color:black;">Version Française</p></a></li>
         </ul>
 
 
@@ -65,7 +65,7 @@
             <div class="col-md-15 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <p align="center"><a href="CV_en.pdf" class="btn btn-primary btn-lg">Download my CV</a></p>
+                  <p align="center"><a href="CV_En.pdf" class="btn btn-primary btn-lg">Download my CV</a></p>
                   <br>
                   <h3>Introduction</h3>
                   <p>My name is Adrien Fauste-Gay. I am studying the resilience and vulnerabilities of agricultural systems in France using a model of foresight and analysis of land use. I am conducting this research as part of a thesis supervised by Lauriane Mouysset in Paris at the International Research Center on Environment and Development (CIRED) and Olivier Vidal in Grenoble at the Institute of Earth Sciences (ISTerre). In connection with my thesis, I am working with the Agriculture team of the Shift Project to develop their future work.</p>
