--- a/about_en.html
+++ b/about_en.html
@@ -65,8 +65,8 @@
             <div class="col-md-15 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
-                  <p align="center"><a href="CV_En.pdf" class="btn btn-primary btn-lg">Download my CV</a></p>
-                  <br>
+                  <!--<p align="center"><a href="CV_En.pdf" class="btn btn-primary btn-lg">Download my CV</a></p>
+                  <br>-->
                   <h3>Introduction</h3>
                   <p>My name is Adrien Fauste-Gay. I am studying the resilience and vulnerabilities of agricultural systems in France using a model of foresight and analysis of land use. I am conducting this research as part of a thesis supervised by Lauriane Mouysset in Paris at the International Research Center on Environment and Development (CIRED) and Olivier Vidal in Grenoble at the Institute of Earth Sciences (ISTerre). In connection with my thesis, I am working with the Agriculture team of the Shift Project to develop their future work.</p>
                   <p>I completed my studies at the Physics Department of the Ecole Normale Supérieure with a minor in Environment and Societies. I obtained a master's degree in Bio-Physics. I am particularly interested in topics related to the environment and the organization of our societies' transition in the face of the challenges of the 21st century.</p>
